--- a/创新思维与实践/embedded/platformio.ini
+++ b/创新思维与实践/embedded/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 lib_deps = adafruit/Adafruit NeoPixel@^1.12.3
+monitor_speed = 115200
