add more features in embedded system

--- a/创新思维与实践/embedded/platformio.ini
+++ b/创新思维与实践/embedded/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-lib_deps = adafruit/Adafruit NeoPixel@^1.12.3
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.12.3
+	waspinator/AccelStepper@^1.64
 monitor_speed = 115200
